--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="LEFT">
         <form id="clear" class="carta" method="get">                    
-            <input class="switch" type="submit" value="CLEAR"/>                    
+            <input class="noSwitch" type="submit" value="CLEAR"/>                    
         </form>                
     </div>
     <div id = "page-content" class="MID">
@@ -128,7 +128,7 @@
     <div class="RIGHT">
         <div class="board">
             <li id="rightB">
-                RESULTADOS:
+                Resultados:
                 <script>
                     
                 </script>
