--- a/static/main_memo.css
+++ b/static/main_memo.css
@@ -2,9 +2,9 @@ html {
     height: 100%;
 }
 body {
-    height: inherit;
+    height: 100%;
     display: grid;
-    grid-template-columns: .5fr 1fr .5fr;
+    grid-template-columns: .4fr 1.0fr .6fr;
     grid-template-rows: .5fr 4.5fr;
     background-image: url('animals.jpg');
     background-size: cover;
@@ -21,9 +21,10 @@ body {
 }
 
 .MID{
-    height: inherit;
+    height: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: .1fr .1fr .1fr .1fr 4.6fr;
+    transition: all 0.2s;
 }
 
 .RIGHT{
@@ -48,6 +49,7 @@ body {
 
 .board{
     text-align: center;
+    transition: all 0.35s;
 }
 
 .RIGHT .board:hover{
@@ -93,7 +95,7 @@ body {
 
 .tiempo {
     text-align: center;
-    font-size: 60px;
+    font-size: 130%;
 }
 
 .notTiempo {
@@ -110,47 +112,69 @@ body {
     transition: all 0.2s;
 }
 
-.espacioJuego {
-    padding-top: 0%;
-    padding: 5%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    aspect-ratio: 1;
-    transition: all 0.2s;
-}
+@media (max-width: 1050px) {
+    .espacioJuego {  
+      padding-left:15%;
+      height: 100%;
+      width: 70%;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(6, 1fr);
+    }
+    .MID{
+        height: 150%;    
+    }
+  }
 
-.espacioJuego .marcoOnsel {
-    height: 90%;
-    width: 90%;
+@media (max-height:580px) {
+    .espacioJuego {  
+        padding-left:15%;
+        height: 100%;
+        width: 70%;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 1fr 1fr;
+      }
+    .MID{
+        height: 25%;    
+    }
+    body {
+        grid-template-columns: .1fr 1.6fr .3fr;
+    }
+};
+
+@media (max-width: 1050px) and (max-height:580px) {
+    .espacioJuego {  
+        padding-left:15%;
+        height: 100%;
+        width: 70%;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 1fr 1fr;
+      }
+    .MID{
+        height: 25%;    
+    }
+    body {
+        grid-template-columns: .1fr 1.6fr .3fr;
+    }
+};
+
+.boardOnsel{
     text-align: center;
-    margin: 1%;
-    border: solid yellow;
-    display: grid;  
-    opacity: 0.8;
+    background-color: yellow;
     transition: all 0.2s; 
 }
 
-.espacioJuego .marcoCorrecto {
-    height: 90%;
-    width: 90%;
+.boardCorrecto{
     text-align: center;
-    margin: 1%;
-    border: solid green;
-    display: grid;  
-    opacity: 0.8;
-    transition: all 0.3s; 
+    background-color: green;
+    border-radius: 150px;
+    transition: all 0.35s;
 }
 
-.espacioJuego .marcoIncorrecto {
-    height: 90%;
-    width: 90%;
+.boardIncorrecto{
     text-align: center;
-    margin: 1%;
-    border: solid red;
-    display: grid;  
-    opacity: 0.8;
-    transition: all 0.3s;
+    background-color: red;
+    border-radius: 150px;
+    transition: all 0.35s; 
 }
 
 .espacioJuego .marco {
@@ -180,6 +204,14 @@ body {
 .espacioJuego .marco .carta{
     height: 100%;
     width: 100%;   
+}
+
+.noSwitch{
+    display: none;
+}
+
+.switch{
+    display: inline-block;
 }
 
 .espacioJuego .marco .switch{
@@ -245,4 +277,9 @@ input[type='submit']:hover{
 
 li {
     text-align: left;
+    padding: 0;
+}
+
+ul {
+    padding: 0;
 }
