--- a/templates/index.html
+++ b/templates/index.html
@@ -34,10 +34,10 @@
             </form>    
             <div class="finalStage">
                 <form id="save" class="carta" method="get">                    
-                    <input class="switch" type="submit" value=" GUARDAR MEMORAMA "/>             
+                    <input class="switch" type="submit" value=" Guardar "/>             
                 </form>    
                 <form id="restart" class="carta" method="get">                                    
-                    <input class="switch" type="submit" value=" REINICIAR SIN GUARDAR "/>             
+                    <input class="switch" type="submit" value=" Reiniciar"/>             
                 </form>    
             </div>
             <div id='container' class="contMR">
