--- a/templates/index.html
+++ b/templates/index.html
@@ -159,6 +159,7 @@
         <script src="{{ url_for('static', filename='AJAX.js') }}"></script>
         <script src="{{ url_for('static', filename='CLEAR.js') }}"></script>    
         <script src="{{ url_for('static', filename='radioListener.js') }}"></script>
+        <script src="{{ url_for('static', filename='listenerHoverBot.js') }}"></script>
         <script> 
             $(document).ready(function() {
                 gameOverSave('#save');
