--- a/static/main_memo.css
+++ b/static/main_memo.css
@@ -31,12 +31,14 @@ body {
 .MID{
     height: inherit;
     display: grid;
+    place-items:center ;
     grid-template-rows:.1fr 4.8fr .1fr ;
     transition: all 0.2s;
 }
 
 .RIGHT{
-    height: fit-content;
+    display: grid;
+    place-items:center;
 }
 
 .Rboard{
@@ -60,6 +62,7 @@ body {
 
 .board{
     height: 100%;
+    width: 50%;
     display: grid;
     place-items: center;
     text-align: center;
@@ -105,8 +108,7 @@ body {
 }
 
 #myResults{
-    height: 90%; 
-    width:60%;
+    padding: 5%
 };
 
 .contR {
@@ -164,20 +166,19 @@ body {
 .espacioJuego {
     padding-top: 0%;
     padding: 5%;
-    padding-left: 12%;
     display: grid;
     place-content: center;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     aspect-ratio: 1;
     transition: all 0.2s;
-    height: 75%;
-    width:  55%;
+    height: 70%;
+    width:  50%;
 }
 
 @media (max-width: 646px) {
     .espacioJuego { 
-      padding-left:5% ;
+      padding-left:12% ;
       height: 100%;
       width: 95%;
       grid-template-columns: 1fr 1fr;
@@ -198,6 +199,10 @@ body {
 }
 
 .boardCorrecto{
+    height: 100%;
+    width: 50%;
+    display: grid;
+    place-items: center;
     text-align: center;
     background-color: green;
     border-radius: 150px;
@@ -205,6 +210,10 @@ body {
 }
 
 .boardIncorrecto{
+    height: 100%;
+    width: 50%;
+    display: grid;
+    place-items: center;
     text-align: center;
     background-color: red;
     border-radius: 150px;
@@ -223,7 +232,7 @@ body {
     transition: all 0.5s;
 }
 
-.espacioJuego .marco:hover {
+.espacioJuego .marco .hover {
     height: 90%;
     width: 90%;
     text-align: center;
@@ -233,6 +242,20 @@ body {
     transform: scale(1.20);
     box-shadow: 0 0 5px orange;
     z-index: 9999;
+    pointer-events:all;
+}
+
+.espacioJuego .marco .noHover {
+    height: 90%;
+    width: 90%;
+    text-align: center;
+    margin: 1%;
+    border: solid;
+    display: grid;
+    transform: scale(1);
+    box-shadow: 0 0 5px orange;
+    z-index: 9999;
+    pointer-events:all;
 }
 
 .espacioJuego .marco .carta{
